spacing fix on bottom text

--- a/app/assets/stylesheets/pages/about.scss
+++ b/app/assets/stylesheets/pages/about.scss
@@ -35,7 +35,6 @@
   h2.about-row-two-header{
     width: 192px;
     height: 24px;
-    font-family: Roboto;
     font-size: 18px;
     font-weight: bold;
     font-style: normal;
@@ -64,7 +63,6 @@
   .about-names-section-two {
     width: 192px;
     height: 24px;
-    font-family: Roboto;
     font-size: 18px;
     font-weight: bold;
     font-style: normal;
@@ -77,7 +75,6 @@
   h4.role-description {
     width: 192px;
     height: 16px;
-    font-family: Roboto;
     font-size: 12px;
     font-weight: 900;
     font-style: normal;
@@ -86,6 +83,10 @@
     letter-spacing: 0.6px;
     color: var(--text-toned-down);
     text-transform: uppercase;
+  }
+
+  p.role-paragraph {
+    margin-left: 16px;
   }
 
   /* rows */
@@ -121,7 +122,7 @@
   }
 
   hr.line-two{
-    width: 17%;
+    width: 192px;
     margin: 0;
     margin-bottom: 19px;
     height: 1px;
